[package]
name = "pplang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"


[dependencies]
thiserror = "1.0.56"
rayon = "1.8.1"
const_panic = "0.2.8"
clap = { version = "4.4.18", features = ["derive"] }
test-case = "3.3.1"
num_enum = "0.7.2"
either = "1.9.0"

[dev-dependencies]
clippy = "0.0.302"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
allow-unwrap-in-tests = "allow"
